--- a/src/Benchmarks/analysis/step_1-perf_comparison_old.ipynb
+++ b/src/Benchmarks/analysis/step_1-perf_comparison_old.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.501371Z",
-     "start_time": "2024-10-01T14:19:30.497597Z"
+     "end_time": "2024-09-12T06:26:38.473945Z",
+     "start_time": "2024-09-12T06:26:38.471Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 73
+   "execution_count": 39
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.530372Z",
-     "start_time": "2024-10-01T14:19:30.526432Z"
+     "end_time": "2024-09-12T06:26:38.523465Z",
+     "start_time": "2024-09-12T06:26:38.518803Z"
     }
    },
    "cell_type": "code",
@@ -45,25 +45,25 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 74
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.580670Z",
-     "start_time": "2024-10-01T14:19:30.575060Z"
+     "end_time": "2024-09-12T06:26:38.589020Z",
+     "start_time": "2024-09-12T06:26:38.582281Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "root_dir = '/home/rob/Documents/3_projects/bench/_results/large_models'\n",
-    "output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis/large_models'\n",
+    "root_dir = '/home/rob/Documents/3_projects/bench/_results/small_models'\n",
+    "output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis/small_models'\n",
     "os.makedirs(output_dir_base_path, exist_ok=True)\n",
     "\n",
     "current_dir = os.getcwd()\n",
-    "#dataset_name = \"kvasir\"\n",
+    "dataset_name = \"kvasir\"\n",
     "#dataset_name = \"NucleiSeg\"\n",
-    "dataset_name = \"URDE\"\n",
+    "#dataset_name = \"URDE\"\n",
     "#dataset_name = \"isaid\"\n",
     "#dataset_name = \"coco\"\n",
     "\n",
@@ -75,24 +75,23 @@
     "    model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\", \"C8\", \"D4\"]\n",
     "else:\n",
     "    perf_metrics = ['IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric', 'fw_iou', 'pacc']\n",
-    "    model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\", \"C8\", \"D4\"]"
+    "    model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\"]"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 75
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.634634Z",
-     "start_time": "2024-10-01T14:19:30.624469Z"
+     "end_time": "2024-09-12T06:26:38.634425Z",
+     "start_time": "2024-09-12T06:26:38.626481Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def get_all_metrics(summary_loc: str, fold_nb: int, result_dict: dict, \n",
-    "                     perf_metrics: list, criteria: str, num_params: int, \n",
-    "                     select_best: bool = False) -> int:\n",
+    "def get_best_metrics(summary_loc: str, fold_nb: int, result_dict: dict, \n",
+    "                     perf_metrics: list, criteria: str, num_params: int) -> int:\n",
     "    with open(summary_loc) as file:\n",
     "        data = json.load(file)\n",
     "        \n",
@@ -103,14 +102,10 @@
     "    if criteria not in data or not data[criteria]:\n",
     "        raise ValueError(f\"Criteria '{criteria}' is not in the data or has no values.\")\n",
     "    \n",
-    "    # Select either the best index (minimum value of the criteria) or the last index\n",
-    "    if select_best:\n",
-    "        best_idx = np.argmin(data[criteria])\n",
-    "    else:\n",
-    "        best_idx = len(data[criteria]) - 1\n",
+    "    best_idx = np.argmin(data[criteria])\n",
     "    \n",
     "    if best_idx >= len(data[criteria]):\n",
-    "        raise IndexError(\"Calculated index is out of bounds for the criteria list.\")\n",
+    "        raise IndexError(\"Calculated best index is out of bounds for the criteria list.\")\n",
     "    \n",
     "    if not all(len(data[metric]) == len(data[criteria]) for metric in perf_metrics):\n",
     "        raise ValueError(\"Mismatch in length between criteria and performance metrics.\")\n",
@@ -129,13 +124,13 @@
    ],
    "id": "aba3c3ffe095f3b5",
    "outputs": [],
-   "execution_count": 76
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.680746Z",
-     "start_time": "2024-10-01T14:19:30.676960Z"
+     "end_time": "2024-09-12T06:26:38.685462Z",
+     "start_time": "2024-09-12T06:26:38.681178Z"
     }
    },
    "cell_type": "code",
@@ -156,13 +151,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 77
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.822006Z",
-     "start_time": "2024-10-01T14:19:30.727888Z"
+     "end_time": "2024-09-12T06:26:38.772455Z",
+     "start_time": "2024-09-12T06:26:38.732365Z"
     }
    },
    "cell_type": "code",
@@ -173,7 +168,7 @@
     "    \n",
     "    for fold in folds:\n",
     "        summary_loc = build_path(dataset_name, model_name, fold, root_dir=root_dir)\n",
-    "        num_params = get_all_metrics(summary_loc, fold, result_dict, perf_metrics, criteria, num_params, select_best=True)\n",
+    "        num_params = get_best_metrics(summary_loc, fold, result_dict, perf_metrics, criteria, num_params)\n",
     "        \n",
     "    results = {'num_params': num_params}\n",
     "\n",
@@ -201,41 +196,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_vanilla/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_vanilla/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_vanilla/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_vanilla/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_vanilla/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_bcnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_bcnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_bcnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_bcnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_bcnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_e2cnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_e2cnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_e2cnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_e2cnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_e2cnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/C8/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/C8/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/C8/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/C8/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/C8/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/D4/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/D4/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/D4/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/D4/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/D4/fold_4/summary.json\n"
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_vanilla/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_vanilla/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_vanilla/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_vanilla/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_vanilla/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_bcnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_bcnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_bcnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_bcnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_bcnn/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_e2cnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_e2cnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_e2cnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_e2cnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/coco/UNet_e2cnn/fold_4/summary.json\n"
      ]
     }
    ],
-   "execution_count": 78
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.834010Z",
-     "start_time": "2024-10-01T14:19:30.832298Z"
+     "end_time": "2024-09-12T06:26:38.791370Z",
+     "start_time": "2024-09-12T06:26:38.789101Z"
     }
    },
    "cell_type": "code",
